[package]
name = "sp-cid"
version = "0.1.0"
edition = "2018"
authors = ["Samuel Burnham <sam@yatima.io>", "John Burnham <john@yatima.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yatima-inc/sp-cid"
documentation = "https://docs.rs/sp-cid"
description = "Cid library for `no_std` use within Substrate"
keywords = ["cid", "no_std"]
categories = ["no-std"]

[features]
default = ["multibase"]
std = ["multibase", "multihash/std", "unsigned-varint/std"]
arb = ["quickcheck", "rand", "multihash/arb"]
scale-codec = ["parity-scale-codec", "multihash/scale-codec"]
serde-codec = ["serde", "multihash/serde-codec"]

[dependencies]
unsigned-varint = { version = "0.7.0", default-features = false }

multibase = { version = "0.9.1", default-features = false, optional = true }
parity-scale-codec = { version = "2.1.1", default-features = false, features = ["derive"], optional = true }
quickcheck = { version = "0.9.2", optional = true }
serde = { version = "1.0.116", optional = true }
rand = { version = "0.7.3", optional = true }
sp-std = { version = "3", default-features = false }
bytecursor = "0.1.0"
#sp-multihash = "0.1.0"
multihash = { version = "0.14.0", default-features = false, features = ["sha2", "sha3", "blake3"] }

[dev-dependencies]
serde_json = "1.0.59"
